# peddetect

./: CMakeLists.txt  README.md  persons
files/: Ze.txt
include/: chnsCompute.hpp  opencvInterface.hpp
src/: chnsCompute.cpp  chnsPyramid.cpp  getScales.cpp  main.cpp  pedDetector.cpp  strongClassifierTree.cpp
